<resources>
    <string name="app_name">Equation Solver</string>
    <string name="action_settings">Settings</string>
    <string name="format_bound" formatted="false">%-12.6g</string>
    <string name="error_multiple_equal_sign">Only one equals sign is allowed.</string>
    <string name="error_illegal_char">Illegal character.</string>
    <string name="error_illegal_expression">Illegal expression.</string>
    <string name="pref_title_plot_sampling_points">Number of data points</string>
    <string name="pref_summary_plot_sampling_points" formatted="false">%d data points in a plot.</string>
    <string name="pref_title_default_lower_bound">Default left endpoint</string>
    <string name="pref_title_default_upper_bound">Default right endpoint</string>
    <string name="pref_title_default_bingo">Default initial guess of Bingo mode</string>
    <string name="pref_category_plotting">Plot settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_misc">Miscellaneous</string>
    <string name="pref_reset_settings">Reset settings to default</string>
    <string name="error_invalid_equation">Invalid equation</string>
    <string name="indeterminate_constants">Some constants cannot be determined yet.</string>
    <string name="error">Error</string>
    <string name="invalid_search_range">Invalid search interval.</string>
    <string name="result">Result</string>
    <string name="no_result">No result.</string>
    <string name="solution">Root</string>
    <string name="choose_variable_id">Choose variable ID</string>
    <string name="setting_id">Setting ID</string>
    <string name="error_lower_bound_higher_than_upper_bound">Left endpoint is larger than right endpoint.</string>
    <string name="lower_bound_of_roi">Left endpoint of ROI</string>
    <string name="upper_bound_of_roi">Right endpoint of ROI</string>
    <string name="click_twice_to_exit">Click BACK again to exit</string>
    <string name="hint_input_equation">ax^2 + bx - exp(x)</string>
    <string name="hint_input_assignment">a = 3.1415927</string>
    <string name="reopen_keyboard">Reopen the keyboard to use application keypad</string>
    <string name="error_invalid_id" formatted="false">%c is not a valid ID</string>
    <string name="action_exit">Exit</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="title_activity_help">Help</string>
    <string name="action_help">Help</string>
    <string name="warning_invalid_format">Invalid number format</string>
    <string name="warning_number_too_big">Input number is too big</string>
    <string name="title_help_activity" formatted="false">Help (%d/%d)</string>
    <string name="error_invalid_number_format">Invalid number format</string>
    <string name="action_about">About</string>
    <string name="cannot_evaluate_at_the_range">Cannot evaluate the equation at the interval. Please check your input.</string>
    <string name="pref_about">About &amp; Report bug</string>
    <string name="no_history">No history available.</string>
    <string name="warning_no_zero_point">Probably no zero point in select interval.</string>
    <string name="warning_multiple_zero_points">Make sure there is only one zero-crossing in the select interval.</string>
    <string name="toast_input_equation">Input the equation in the text box</string>
    <string name="toast_assign_id">Assign an ID in the text box</string>
    <string name="drag_zoom_to_find_an_intersection_with_x_axis">Drag/zoom until there is only one zero-crossing.</string>
    <string name="lower_bound">Left endpoint</string>
    <string name="upper_bound">Right endpoint</string>
    <string name="initial_guess">Initial guess</string>
</resources>
