<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.cvhc.equationsolver.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="300"
          app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>
